# JT

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tweets_output.json
.playwright_user_data/: Last Browser  Local State
.playwright_user_data/Default/: Affiliation Database  DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
.playwright_user_data/Default/DawnGraphiteCache/: data_1  index
.playwright_user_data/Default/DawnWebGPUCache/: data_1  index
.playwright_user_data/Default/Extension Rules/: LOG
.playwright_user_data/Default/Extension Scripts/: LOG
.playwright_user_data/Default/Extension State/: LOG  LOG.old
.playwright_user_data/Default/GCM Store/: LOG  LOG.old
.playwright_user_data/Default/GPUCache/: data_0  data_1  data_2  index
.playwright_user_data/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  (+1 more)
.playwright_user_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  index
.playwright_user_data/ShaderCache/: data_1  index
.playwright_user_data/segmentation_platform/: ukm_db
src/: app.py
src/cli/: main.py
src/config/: settings.py
src/linkedin/: ingest.py  job_detector.py  job_parser.py  matcher.py  scraper.py
src/twitter/: publisher.py  tweet_generator.py
tests/: sample_posts.json  test_detector.py  test_ingest.py  test_matcher.py  test_parser.py  test_publisher.py  test_scraper.py  test_tweet.py
(+421 files in other folders)
