[project]
name = "jt"
version = "0.1.0"
description = "LinkedIn to X Job announcement parser and tweet generator pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.1.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "tweepy>=4.14.0",
    "playwright>=1.30.0",
    "streamlit>=1.30.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
